<?xml version="1.0"?>
<package>
  <name>evo_kinematics</name>
  <version>0.0.0</version>
  <description>The evo_kinematics package</description>
  <maintainer email="youjun@todo.todo">youjun</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
