<?xml version="1.0"?>
<package>
  <name>robotis_device</name>
  <version>0.2.0</version>
  <description>
    The package that manages device information of ROBOTIS robots.
    This package is used when reading device information with the robot information file
    from the robotis_controller package.
  </description>
  <license>BSD</license>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-Framework</url>
  <url type="website">http://wiki.ros.org/robotis_device</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
</package>
